# gps-binding

./: .gitignore  .gitlab-ci.yml  .gitreview  CMakeLists.txt  LICENSE.GPLv3  MAINTAINERS  README.md  gps-binding.spec  manifest.yml
autobuild/agl/: autobuild
binding/: CMakeLists.txt  info_verb.json  json_info.c  rp-gps-binding.c  rp-gps-binding.h
ci/: test_and_coverage.sh
conf.d/cmake/: config.cmake
conf.d/packaging/: gps-binding.spec  rp-service-gps.spec
docs/: 1_architecture.md  2_installation.md  3_usage.md  4_api_description.md  api-services-book.yml
redtest/: CMakeLists.txt  run-redtest  run-redtest.in
test/: CMakeLists.txt  bzh.nmea  lorient.nmea  run.sh  script.py  tests.py
test/afb-test/: CMakeLists.txt
test/afb-test/etc/: CMakeLists.txt  aft-agl-rp-service-gps.json  aft-gps-binding.json  aft-rp-service-gps.json
test/afb-test/fixtures/: CMakeLists.txt  mapi_rp-service-gps.lua  run-test.sh  test.nmea
test/afb-test/tests/: CMakeLists.txt  GPSBasicTests.lua  GPSFakeEventTests.lua  mapi_tests.lua  rp-service-gps.lua
